/**
 * çœŸæ­£çš„ Connect RPC API å®¢æˆ·ç«¯
 * 
 * ä½¿ç”¨æ„å»ºæ—¶ç”Ÿæˆçš„ç±»å‹å®‰å…¨å®¢æˆ·ç«¯ï¼Œéµå¾ª Connect RPC æœ€ä½³å®è·µ
 */

import { createPromiseClient, type PromiseClient } from "@connectrpc/connect";
import { createConnectTransport } from "@connectrpc/connect-web";
import { AiService } from "../generated/cpp_connect";
import { FileSyncService } from "../generated/fs_connect";
import { 
  StreamCppRequest, 
  StreamCppResponse,
  CurrentFileInfo,
  CursorPosition,
  CppContextItem,
  AdditionalFile,
  CppIntentInfo
} from "../generated/cpp_pb";
import { 
  FSUploadFileRequest, 
  FSUploadFileResponse 
} from "../generated/fs_pb";

import type { CursorConfig, CompletionRequest, FileInfo } from '../types';
import { Logger } from '../utils/logger';
import { CryptoUtils } from '../utils/crypto';
import { AuthHelper } from '../utils/auth-helper';
import { getOrGenerateClientKey, validateChecksum } from '../utils/checksum';
import { FileSyncStateManager } from './filesync-state-manager';
import * as vscode from 'vscode';

export interface ConnectRpcApiClientOptions {
  baseUrl: string;
  authToken: string;
  clientKey: string;
  gcppHost?: string;
  timeout?: number;
  workspaceId?: string;
  maxTokens?: number;
}

/**
 * åŸºäº Connect RPC çš„ Cursor API å®¢æˆ·ç«¯
 * ä½¿ç”¨ç”Ÿæˆçš„ç±»å‹å®‰å…¨æœåŠ¡å®¢æˆ·ç«¯
 */
export class ConnectRpcApiClient {
  private logger: Logger;
  private aiClient: PromiseClient<typeof AiService>;
  private fileSyncClient: PromiseClient<typeof FileSyncService>;
  private filesyncCookie: string;
  private filesyncClientKey: string; // æ·»åŠ  FileSyncService ä¸“ç”¨çš„å®¢æˆ·ç«¯å¯†é’¥
  private options: ConnectRpcApiClientOptions;
  private fileSyncStateManager: FileSyncStateManager; // ğŸ”§ æ·»åŠ æ–‡ä»¶åŒæ­¥çŠ¶æ€ç®¡ç†

  constructor(options: ConnectRpcApiClientOptions) {
    this.logger = Logger.getInstance();
    this.options = options;
    this.filesyncCookie = CryptoUtils.generateFilesyncCookie();
    this.filesyncClientKey = CryptoUtils.generateClientKey(); // ç”Ÿæˆ FileSyncService ä¸“ç”¨çš„å®¢æˆ·ç«¯å¯†é’¥
    this.fileSyncStateManager = new FileSyncStateManager(); // ğŸ”§ åˆå§‹åŒ–æ–‡ä»¶åŒæ­¥çŠ¶æ€ç®¡ç†

    // åˆ›å»º Connect RPC ä¼ è¾“å±‚
    const transport = createConnectTransport({
      baseUrl: options.baseUrl,
      defaultTimeoutMs: options.timeout || 15000, // å‡å°‘è¶…æ—¶æ—¶é—´åˆ°15ç§’
      interceptors: [
        // å“åº”æ‹¦æˆªå™¨ - è®°å½•HTTPå“åº”çŠ¶æ€å’Œå†…å®¹
        (next) => async (req) => {
          try {
            const response = await next(req);
            this.logger.info(`âœ… HTTP å“åº”æˆåŠŸ: ${req.url}`);
            
            // ğŸ“Š è°ƒè¯•ï¼šè®°å½•å“åº”å¤´éƒ¨ä¿¡æ¯
            if (response.header) {
              this.logger.info('ğŸ“‹ å“åº”å¤´éƒ¨:');
              response.header.forEach((value, key) => {
                this.logger.info(`  ${key}: ${value}`);
              });
            }
            
            return response;
          } catch (error) {
            this.logger.error(`âŒ HTTP å“åº”å¤±è´¥: ${req.url}`, error as Error);
            
            // ğŸ” å¢å¼ºé”™è¯¯æ—¥å¿—ï¼šå°è¯•æå–æ›´å¤šé”™è¯¯ä¿¡æ¯
            if (error && typeof error === 'object') {
              this.logger.error('ğŸ” æ‹¦æˆªå™¨é”™è¯¯è¯¦ç»†åˆ†æ:');
              this.logger.error(`  ğŸš¨ é”™è¯¯ç±»å‹: ${error.constructor.name}`);
              this.logger.error(`  ğŸ“ é”™è¯¯æ¶ˆæ¯: ${(error as any).message || 'æ— æ¶ˆæ¯'}`);
              
              // ConnectError ç‰¹å®šä¿¡æ¯
              if ('code' in error) {
                this.logger.error(`  ğŸ”¢ Connecté”™è¯¯ç : ${(error as any).code}`);
              }
              if ('rawMessage' in error) {
                this.logger.error(`  ğŸ“œ åŸå§‹æ¶ˆæ¯: ${(error as any).rawMessage}`);
              }
              if ('details' in error) {
                this.logger.error(`  ğŸ“‹ é”™è¯¯è¯¦æƒ…: ${JSON.stringify((error as any).details, null, 2)}`);
              }
              
              // HTTP å“åº”ç›¸å…³ä¿¡æ¯
              if ('status' in error) {
                this.logger.error(`  ğŸŒ HTTPçŠ¶æ€ç : ${(error as any).status}`);
              }
              if ('statusText' in error) {
                this.logger.error(`  ğŸ“¤ HTTPçŠ¶æ€æ–‡æœ¬: ${(error as any).statusText}`);
              }
              
              // å®Œæ•´é”™è¯¯å¯¹è±¡
              try {
                const errorDetails = JSON.stringify(error, Object.getOwnPropertyNames(error), 2);
                this.logger.error(`  ğŸ“„ å®Œæ•´é”™è¯¯å¯¹è±¡: ${errorDetails}`);
              } catch (jsonError) {
                this.logger.error('  âš ï¸ æ— æ³•åºåˆ—åŒ–æ‹¦æˆªå™¨é”™è¯¯å¯¹è±¡');
              }
            }
            
            throw error;
          }
        },
        // æ·»åŠ è®¤è¯å¤´éƒ¨
        (next) => async (req) => {
          // ä¼˜å…ˆç”Ÿæˆæ–°çš„checksumï¼Œç¡®ä¿æ ¼å¼æ­£ç¡®
          let checksum = options.clientKey;
          
          // å¦‚æœæ²¡æœ‰checksumæˆ–æ ¼å¼ä¸æ­£ç¡®ï¼Œç”Ÿæˆæ–°çš„
          if (!checksum || !validateChecksum(checksum)) {
            checksum = getOrGenerateClientKey();
            this.logger.info('ğŸ”„ ä½¿ç”¨æ–°ç”Ÿæˆçš„ checksumï¼ˆåŸæœ‰æ ¼å¼ä¸æ­£ç¡®ï¼‰');
          }
          
          // æ·»åŠ è¯¦ç»†çš„è°ƒè¯•æ—¥å¿—
          this.logger.info('ğŸ”‘ è®¤è¯ä¿¡æ¯è°ƒè¯•:');
          this.logger.info(`ğŸ“‹ Bearer Token: ${options.authToken ? `${options.authToken.substring(0, 10)}...` : 'æœªè®¾ç½®'}`);
          this.logger.info(`ğŸ” Checksum: ${checksum.substring(0, 20)}... (${checksum.length} å­—ç¬¦)`);
          this.logger.info(`âœ… Checksum éªŒè¯: ${validateChecksum(checksum)}`);
          this.logger.info(`ğŸŒ è¯·æ±‚ URL: ${req.url}`);
          this.logger.info(`ğŸ“¡ è¯·æ±‚æ–¹æ³•: POST`); // Connect RPC æ€»æ˜¯ä½¿ç”¨ POST
          
          // è®¾ç½®è®¤è¯å¤´éƒ¨
          req.header.set("authorization", `Bearer ${options.authToken}`);
          req.header.set("x-cursor-client-version", "1.3.6");
          
          // ğŸ§ª å®éªŒï¼šæµ‹è¯•æ˜¯å¦çœŸçš„éœ€è¦checksum
          const SKIP_CHECKSUM = false; // cursor-apiéœ€è¦checksumå¤´éƒ¨è¿›è¡Œè®¤è¯
          if (!SKIP_CHECKSUM) {
            req.header.set("x-cursor-checksum", checksum);
            this.logger.info('ğŸ” å‘é€ checksum');
          } else {
            this.logger.info('ğŸ§ª è·³è¿‡ checksumï¼ˆå®éªŒæ¨¡å¼ï¼‰');
          }
          
          // æ‰“å°æ‰€æœ‰å¤´éƒ¨ä¿¡æ¯
          this.logger.info('ğŸ“‹ è¯·æ±‚å¤´éƒ¨:');
          req.header.forEach((value, key) => {
            if (key.toLowerCase().includes('auth') || key.toLowerCase().includes('cursor')) {
              const displayValue = key.toLowerCase().includes('authorization') 
                ? `${value.substring(0, 20)}...` 
                : value;
              this.logger.info(`  ${key}: ${displayValue}`);
            }
          });
          
          return await next(req);
        },
      ],
    });

    // åˆ›å»ºä¸“é—¨ä¸º FileSyncService é…ç½®çš„ä¼ è¾“å±‚
    const fileSyncTransport = createConnectTransport({
      baseUrl: options.baseUrl,
      defaultTimeoutMs: options.timeout || 15000,
      interceptors: [
        // å“åº”æ‹¦æˆªå™¨ - è®°å½•HTTPå“åº”çŠ¶æ€
        (next) => async (req) => {
          try {
            const response = await next(req);
            this.logger.info(`âœ… FileSyncService HTTP å“åº”æˆåŠŸ: ${req.url}`);
            return response;
          } catch (error) {
            this.logger.error(`âŒ FileSyncService HTTP å“åº”å¤±è´¥: ${req.url}`, error as Error);
            throw error;
          }
        },
        // FileSyncService ä¸“ç”¨è®¤è¯å¤´éƒ¨
        (next) => async (req) => {
          // ä¼˜å…ˆç”Ÿæˆæ–°çš„checksumï¼Œç¡®ä¿æ ¼å¼æ­£ç¡®
          let checksum = options.clientKey;
          
          // å¦‚æœæ²¡æœ‰checksumæˆ–æ ¼å¼ä¸æ­£ç¡®ï¼Œç”Ÿæˆæ–°çš„
          if (!checksum || !validateChecksum(checksum)) {
            checksum = getOrGenerateClientKey();
            this.logger.info('ğŸ”„ FileSyncService ä½¿ç”¨æ–°ç”Ÿæˆçš„ checksumï¼ˆåŸæœ‰æ ¼å¼ä¸æ­£ç¡®ï¼‰');
          }
          
          // æ·»åŠ è¯¦ç»†çš„è°ƒè¯•æ—¥å¿—
          this.logger.info('ğŸ”‘ FileSyncService è®¤è¯ä¿¡æ¯è°ƒè¯•:');
          this.logger.info(`ğŸ“‹ Bearer Token: ${options.authToken ? `${options.authToken.substring(0, 10)}...` : 'æœªè®¾ç½®'}`);
          this.logger.info(`ğŸ” Checksum: ${checksum.substring(0, 20)}... (${checksum.length} å­—ç¬¦)`);
          this.logger.info(`ğŸ”‘ FileSyncClientKey: ${this.filesyncClientKey.substring(0, 20)}... (${this.filesyncClientKey.length} å­—ç¬¦)`);
          this.logger.info(`ğŸª FilesyncCookie: ${this.filesyncCookie.substring(0, 16)}... (${this.filesyncCookie.length} å­—ç¬¦)`);
          this.logger.info(`ğŸŒ è¯·æ±‚ URL: ${req.url}`);
          this.logger.info(`ğŸ“¡ è¯·æ±‚æ–¹æ³•: POST`);
          
          // è®¾ç½®è®¤è¯å¤´éƒ¨
          req.header.set("authorization", `Bearer ${options.authToken}`);
          req.header.set("x-cursor-client-version", "1.3.6");
          req.header.set("x-cursor-checksum", checksum);
          
          // ğŸ”‘ å…³é”®ï¼šæ·»åŠ  FileSyncService æ‰€éœ€çš„è®¤è¯å¤´éƒ¨
          req.header.set("x-client-key", this.filesyncClientKey);
          req.header.set("x-fs-client-key", this.filesyncClientKey); // å®˜æ–¹APIè¿˜éœ€è¦è¿™ä¸ªå¤´éƒ¨
          
          // æ·»åŠ  Cookieï¼ˆåŒ…å« FilesyncCookieï¼‰
          req.header.set("cookie", `FilesyncCookie=${this.filesyncCookie}`);
          
          // æ‰“å°æ‰€æœ‰å¤´éƒ¨ä¿¡æ¯
          this.logger.info('ğŸ“‹ FileSyncService è¯·æ±‚å¤´éƒ¨:');
          req.header.forEach((value, key) => {
            if (key.toLowerCase().includes('auth') || 
                key.toLowerCase().includes('cursor') || 
                key.toLowerCase().includes('client') ||
                key.toLowerCase().includes('cookie') ||
                key.toLowerCase().includes('fs')) {
              const displayValue = key.toLowerCase().includes('authorization') 
                ? `${value.substring(0, 20)}...` 
                : (key.toLowerCase().includes('key') || key.toLowerCase().includes('cookie'))
                  ? `${value.substring(0, 16)}...`
                  : value;
              this.logger.info(`  ${key}: ${displayValue}`);
            }
          });
          
          return await next(req);
        },
      ],
    });

    // åˆ›å»ºç±»å‹å®‰å…¨çš„æœåŠ¡å®¢æˆ·ç«¯
    this.aiClient = createPromiseClient(AiService, transport);
    this.fileSyncClient = createPromiseClient(FileSyncService, fileSyncTransport);

    this.logger.info('âœ… Connect RPC å®¢æˆ·ç«¯åˆå§‹åŒ–å®Œæˆ');
  }

  /**
   * æ›´æ–°é…ç½®
   */
  updateConfig(config: CursorConfig): void {
    // TODO: é‡æ–°åˆ›å»ºä¼ è¾“å±‚å’Œå®¢æˆ·ç«¯
    this.logger.info('âš ï¸ Connect RPC é…ç½®æ›´æ–°éœ€è¦é‡æ–°åˆ›å»ºå®¢æˆ·ç«¯');
  }

  /**
   * æµå¼ä»£ç è¡¥å…¨
   * ä½¿ç”¨ Connect RPC Server-Streaming
   */
  async *streamCpp(request: CompletionRequest, abortSignal?: AbortSignal): AsyncIterable<StreamCppResponse> {
    try {
      this.logger.info('ğŸš€ å¼€å§‹ Connect RPC StreamCpp è°ƒç”¨');
      this.logger.info(`ğŸ“„ æ–‡ä»¶: ${request.currentFile.path}`);
      this.logger.info(`ğŸ“ å…‰æ ‡: line ${request.cursorPosition.line}, column ${request.cursorPosition.column}`);
      
      // ğŸ” è°ƒè¯•ï¼šæ£€æŸ¥ä¼ å…¥çš„è¯·æ±‚å†…å®¹
      this.logger.info('ğŸ” ä¼ å…¥è¯·æ±‚å†…å®¹è°ƒè¯•:');
      this.logger.info(`  ğŸ“„ request.currentFile.content: ${request.currentFile.content ? `${request.currentFile.content.length} å­—ç¬¦` : 'ä¸ºç©ºæˆ–æœªå®šä¹‰'}`);
      this.logger.info(`  ğŸ“ request.currentFile.path: ${request.currentFile.path}`);
      this.logger.info(`  ğŸ” request.currentFile.sha256: ${request.currentFile.sha256 || 'æœªè®¾ç½®'}`);
      this.logger.info(`  ğŸ¯ request.modelName: ${request.modelName || 'æœªè®¾ç½®'}`);
      this.logger.info(`  ğŸ“š request.additionalFiles: ${request.additionalFiles?.length || 0} ä¸ªæ–‡ä»¶`);

      // ğŸ”§ è·å–çœŸå®çš„å·¥ä½œåŒºæ ¹è·¯å¾„
      let workspaceRootPath = '';
      const currentFilePath = request.currentFile.path || 'unknown.ts';
      
      // å°è¯•ä»å½“å‰æ´»åŠ¨æ–‡æ¡£è·å–å·¥ä½œåŒºä¿¡æ¯
      if (vscode.window.activeTextEditor) {
        const workspaceFolder = vscode.workspace.getWorkspaceFolder(vscode.window.activeTextEditor.document.uri);
        if (workspaceFolder) {
          workspaceRootPath = workspaceFolder.uri.fsPath;
          this.logger.debug(`ğŸ” è·å–åˆ°å·¥ä½œåŒºæ ¹è·¯å¾„: ${workspaceRootPath}`);
        }
      }
      
      // å¦‚æœæ²¡æœ‰è·å–åˆ°ï¼Œä½¿ç”¨ç¬¬ä¸€ä¸ªå·¥ä½œåŒºæ–‡ä»¶å¤¹
      if (!workspaceRootPath && vscode.workspace.workspaceFolders && vscode.workspace.workspaceFolders.length > 0) {
        workspaceRootPath = vscode.workspace.workspaceFolders[0].uri.fsPath;
        this.logger.debug(`ğŸ” ä½¿ç”¨ç¬¬ä¸€ä¸ªå·¥ä½œåŒºæ–‡ä»¶å¤¹: ${workspaceRootPath}`);
      }
      
      // å¦‚æœä»ç„¶æ²¡æœ‰ï¼Œä½¿ç”¨å½“å‰æ–‡ä»¶çš„ç›®å½•
      if (!workspaceRootPath) {
        workspaceRootPath = process.cwd();
        this.logger.warn(`âš ï¸ æ— æ³•è·å–å·¥ä½œåŒºè·¯å¾„ï¼Œä½¿ç”¨å½“å‰å·¥ä½œç›®å½•: ${workspaceRootPath}`);
      }

      // ğŸ”§ æ™ºèƒ½é€‰æ‹©æ–‡ä»¶åŒæ­¥æ¨¡å¼æˆ–çº¯å†…å®¹æ¨¡å¼
      const workspaceId = "a-b-c-d-e-f-g"; // ï¼ˆå›ºå®šå·¥ä½œåŒºIDï¼‰
      const currentFileInfo = request.currentFile;
      
      // ğŸ” æ£€æŸ¥æ˜¯å¦å¯ä»¥ä½¿ç”¨æ–‡ä»¶åŒæ­¥æ¨¡å¼
      const canUseFileSync = this.fileSyncStateManager.isFileSynced(currentFileInfo, workspaceId);
      const versionInfo = canUseFileSync ? this.fileSyncStateManager.buildFileVersionInfo(currentFileInfo.path) : null;
      
      this.logger.info(`ğŸ”„ æ–‡ä»¶åŒæ­¥æ¨¡å¼: ${canUseFileSync ? 'å¯ç”¨' : 'ç¦ç”¨'}`);
      if (versionInfo) {
        this.logger.info(`ğŸ“ æ–‡ä»¶ç‰ˆæœ¬: ${versionInfo.fileVersion}, å“ˆå¸Œ: ${versionInfo.sha256Hash.substring(0, 16)}...`);
      }

      const streamRequest = new StreamCppRequest({
        workspaceId: workspaceId,
        
        // æ ¹æ®æ–‡ä»¶åŒæ­¥çŠ¶æ€æ„å»ºæ–‡ä»¶ä¿¡æ¯      
        currentFile: new CurrentFileInfo({
          relativeWorkspacePath: currentFilePath,
          contents: canUseFileSync ? '' : (request.currentFile.content || ''), // ğŸ”§ æ™ºèƒ½é€‰æ‹©
          cursorPosition: new CursorPosition({
            line: request.cursorPosition.line,
            column: request.cursorPosition.column
          }),
          fileVersion: versionInfo?.fileVersion || 1,
          sha256Hash: versionInfo?.sha256Hash || (request.currentFile.sha256 || ''),
          relyOnFilesync: canUseFileSync, // ğŸ”§ åŠ¨æ€è®¾ç½®
          languageId: this.getLanguageId(currentFilePath),
          totalNumberOfLines: (request.currentFile.content || '').split('\n').length,
          workspaceRootPath: workspaceRootPath,
          lineEnding: this.detectLineEnding(request.currentFile.content || '')
        }),
        
        // CppIntentInfo - å¿…éœ€å­—æ®µ
        cppIntentInfo: new CppIntentInfo({
          source: "typing"
        }),
        
        // åŸºç¡€å‚æ•°
        modelName: request.modelName || 'auto',
        isDebug: false,
        giveDebugOutput: false,
        enableMoreContext: true
      });

      this.logger.info('ğŸ“¡ å‘é€å®Œæ•´çš„ Connect RPC StreamCpp è¯·æ±‚');
      this.logger.info(`ğŸ†” å·¥ä½œåŒºID: ${streamRequest.workspaceId}`);
      this.logger.info(`ğŸ“„ æ–‡ä»¶è·¯å¾„: ${streamRequest.currentFile?.relativeWorkspacePath}`);
      this.logger.info(`ğŸ”¤ è¯­è¨€ID: ${streamRequest.currentFile?.languageId}`);
      this.logger.info(`ğŸ“Š å†…å®¹é•¿åº¦: ${streamRequest.currentFile?.contents?.length || 0} å­—ç¬¦`);
      this.logger.info(`ğŸ“š ä¸Šä¸‹æ–‡æ–‡ä»¶æ•°: ${streamRequest.contextItems.length}, é™„åŠ æ–‡ä»¶æ•°: ${streamRequest.additionalFiles.length}`);
      this.logger.info(`ğŸ¯ æ¨¡å‹: ${streamRequest.modelName}`);
      
      // ğŸ” å¢å¼ºæ—¥å¿—ï¼šè¯¦ç»†çš„è¯·æ±‚ä½“å†…å®¹è°ƒè¯•
      this.logger.info('ğŸ” è¯¦ç»†è¯·æ±‚ä½“ä¿¡æ¯:');
      this.logger.info(`  ğŸ“ å…‰æ ‡ä½ç½®: line ${streamRequest.currentFile?.cursorPosition?.line}, column ${streamRequest.currentFile?.cursorPosition?.column}`);
      this.logger.info(`  ğŸ“ æ€»è¡Œæ•°: ${streamRequest.currentFile?.totalNumberOfLines}`);
      this.logger.info(`  ğŸ” SHA256: ${streamRequest.currentFile?.sha256Hash?.substring(0, 16)}...`);
      this.logger.info(`  ğŸ”„ ä¾èµ–æ–‡ä»¶åŒæ­¥: ${streamRequest.currentFile?.relyOnFilesync}`);
      this.logger.info(`  ğŸ“ å·¥ä½œåŒºæ ¹è·¯å¾„: ${streamRequest.currentFile?.workspaceRootPath}`);
      this.logger.info(`  ğŸ“ è¡Œç»“æŸç¬¦: ${JSON.stringify(streamRequest.currentFile?.lineEnding)}`);
      this.logger.info(`  ğŸš€ ç«‹å³ç¡®è®¤: ${streamRequest.immediatelyAck}`);
      this.logger.info(`  ğŸ§  å¢å¼ºä¸Šä¸‹æ–‡: ${streamRequest.enableMoreContext}`);
      this.logger.info(`  ğŸ› è°ƒè¯•æ¨¡å¼: ${streamRequest.isDebug}`);
      this.logger.info(`  ğŸŒ™ å¤œé—´ç‰ˆæœ¬: ${streamRequest.isNightly}`);
      this.logger.info(`  â° å®¢æˆ·ç«¯æ—¶é—´: ${new Date((streamRequest.clientTime || 0) * 1000).toISOString()}`);
      
      // ğŸ” è®°å½•ä¸Šä¸‹æ–‡æ–‡ä»¶è¯¦æƒ…
      if (streamRequest.contextItems.length > 0) {
        this.logger.info('ğŸ“š ä¸Šä¸‹æ–‡æ–‡ä»¶è¯¦æƒ…:');
        streamRequest.contextItems.forEach((item, index) => {
          this.logger.info(`  ${index + 1}. ${item.relativeWorkspacePath} (è¯„åˆ†: ${item.score}, é•¿åº¦: ${item.contents?.length || 0})`);
        });
      }
      
      // ğŸ” è®°å½•è¯Šæ–­ä¿¡æ¯
      if (streamRequest.currentFile?.diagnostics && streamRequest.currentFile.diagnostics.length > 0) {
        this.logger.info(`ğŸ©º è¯Šæ–­ä¿¡æ¯æ•°é‡: ${streamRequest.currentFile.diagnostics.length}`);
      }
      
      // ğŸ” è®°å½•è¯·æ±‚ä½“åºåˆ—åŒ–å¤§å°ï¼ˆä¼°ç®—ï¼‰
      try {
        const serializedSize = streamRequest.toBinary().length;
        this.logger.info(`ğŸ“¦ åºåˆ—åŒ–åè¯·æ±‚ä½“å¤§å°: ${serializedSize} å­—èŠ‚`);
      } catch (serializeError) {
        this.logger.warn('âš ï¸ æ— æ³•è®¡ç®—è¯·æ±‚ä½“åºåˆ—åŒ–å¤§å°', serializeError as Error);
      }

      // åˆ›å»ºç»„åˆçš„ AbortSignalï¼ŒåŒ…å«è¶…æ—¶å’Œå¤–éƒ¨å–æ¶ˆ
      const timeoutController = new AbortController();
      const timeoutId = setTimeout(() => {
        this.logger.debug('â° æµå¼è¯·æ±‚è¶…æ—¶ï¼Œè‡ªåŠ¨å–æ¶ˆ');
        timeoutController.abort();
      }, 10000); // 10ç§’è¶…æ—¶

      const combinedSignal = abortSignal ? 
        this.combineAbortSignals([abortSignal, timeoutController.signal]) :
        timeoutController.signal;

      // ä½¿ç”¨ Connect RPC æµå¼è°ƒç”¨
      const stream = this.aiClient.streamCpp(streamRequest, { 
        signal: combinedSignal 
      });

      let responseCount = 0;

      try {
        for await (const response of stream) {
          responseCount++;
          
          this.logger.debug('ğŸ“¨ æ”¶åˆ° StreamCpp å“åº”:', {
            count: responseCount,
            text: response.text?.substring(0, 50) + '...',
            doneStream: response.doneStream
          });
          
          yield response;
          
          if (response.doneStream) {
            this.logger.info(`âœ… StreamCpp æµå¼è°ƒç”¨å®Œæˆ (æ”¶åˆ°${responseCount}ä¸ªå“åº”)`);
            clearTimeout(timeoutId);
            break;
          }
        }
      } finally {
        clearTimeout(timeoutId);
      }

    } catch (error) {
      this.logger.error('âŒ Connect RPC StreamCpp è°ƒç”¨å¤±è´¥', error as Error);
      
      // ğŸ” å¢å¼ºé”™è¯¯æ—¥å¿—ï¼šè¯¦ç»†åˆ†æé”™è¯¯ç±»å‹å’Œå†…å®¹
      if (error && typeof error === 'object') {
        this.logger.error('ğŸ” è¯¦ç»†é”™è¯¯åˆ†æ:');
        this.logger.error(`  ğŸš¨ é”™è¯¯ç±»å‹: ${error.constructor.name}`);
        this.logger.error(`  ğŸ“ é”™è¯¯æ¶ˆæ¯: ${(error as any).message || 'æ— æ¶ˆæ¯'}`);
        
        // ConnectError ç‰¹å®šä¿¡æ¯
        if ('code' in error) {
          this.logger.error(`  ğŸ”¢ é”™è¯¯ç : ${(error as any).code}`);
        }
        if ('rawMessage' in error) {
          this.logger.error(`  ğŸ“œ åŸå§‹æ¶ˆæ¯: ${(error as any).rawMessage}`);
        }
        if ('details' in error) {
          this.logger.error(`  ğŸ“‹ é”™è¯¯è¯¦æƒ…: ${JSON.stringify((error as any).details, null, 2)}`);
        }
        if ('metadata' in error) {
          this.logger.error(`  ğŸ·ï¸ å…ƒæ•°æ®: ${JSON.stringify((error as any).metadata, null, 2)}`);
        }
        
        // HTTP ç›¸å…³é”™è¯¯ä¿¡æ¯
        if ('status' in error) {
          this.logger.error(`  ğŸŒ HTTPçŠ¶æ€: ${(error as any).status}`);
        }
        if ('statusText' in error) {
          this.logger.error(`  ğŸ“¤ çŠ¶æ€æ–‡æœ¬: ${(error as any).statusText}`);
        }
        if ('url' in error) {
          this.logger.error(`  ğŸ”— è¯·æ±‚URL: ${(error as any).url}`);
        }
        
        // å®Œæ•´é”™è¯¯å¯¹è±¡ï¼ˆç”¨äºæ·±åº¦è°ƒè¯•ï¼‰
        try {
          const errorJson = JSON.stringify(error, Object.getOwnPropertyNames(error), 2);
          this.logger.error(`  ğŸ“„ å®Œæ•´é”™è¯¯å¯¹è±¡: ${errorJson}`);
        } catch (jsonError) {
          this.logger.error('  âš ï¸ æ— æ³•åºåˆ—åŒ–é”™è¯¯å¯¹è±¡');
        }
        
        // å †æ ˆè·Ÿè¸ª
        if ('stack' in error && (error as any).stack) {
          this.logger.error(`  ğŸ“š å †æ ˆè·Ÿè¸ª: ${(error as any).stack}`);
        }
      }
      
      throw error;
    }
  }

  /**
   * ä¸Šä¼ æ–‡ä»¶
   * ä½¿ç”¨ Connect RPC Unary è°ƒç”¨
   */
  async uploadFile(fileInfo: FileInfo, workspaceId: string): Promise<FSUploadFileResponse> {
    try {
      this.logger.info(`ğŸ“¤ Connect RPC ä¸Šä¼ æ–‡ä»¶: ${fileInfo.path}`);
      this.logger.info(`ğŸ†” ä½¿ç”¨å·¥ä½œåŒºID: ${workspaceId}`);
      
      const uuid = CryptoUtils.generateUUID();
      const uploadRequest = new FSUploadFileRequest({
        uuid: uuid,
        relativeWorkspacePath: fileInfo.path,
        contents: fileInfo.content || '',
        modelVersion: fileInfo.modelVersion || 0,
        sha256Hash: fileInfo.sha256 || ''
        // æ³¨æ„ï¼šworkspaceId ä¸åœ¨ FSUploadFileRequest ä¸­ï¼Œéœ€è¦é€šè¿‡å…¶ä»–æ–¹å¼ä¼ é€’
      });

      this.logger.info(`ğŸ“Š æ–‡ä»¶å¤§å°: ${uploadRequest.contents.length} å­—ç¬¦`);
      this.logger.info(`ğŸ” SHA256: ${uploadRequest.sha256Hash?.substring(0, 16) || 'undefined'}...`);
      this.logger.info(`ğŸ“¦ UUID: ${uploadRequest.uuid}`);

      const response = await this.fileSyncClient.fSUploadFile(uploadRequest);
      
      this.logger.info('âœ… Connect RPC æ–‡ä»¶ä¸Šä¼ æˆåŠŸ');
      this.logger.info(`ğŸ“ è¿”å›ä¿¡æ¯: é”™è¯¯ç =${response.error} (0=æˆåŠŸ)`);
      
      // ğŸ”§ è®°å½•æ–‡ä»¶åŒæ­¥çŠ¶æ€
      this.fileSyncStateManager.recordUploadSuccess(fileInfo, workspaceId, uuid, response);
      
      return response;
      
    } catch (error) {
      this.logger.error(`âŒ Connect RPC æ–‡ä»¶ä¸Šä¼ å¤±è´¥: ${fileInfo.path}`, error as Error);
      throw error;
    }
  }

  /**
   * æµ‹è¯•è¿æ¥
   */
  async testConnection(): Promise<{ success: boolean; message: string; details?: any }> {
    try {
      this.logger.info('ğŸ” æµ‹è¯• Connect RPC è¿æ¥');
      
      // åˆ›å»ºä¸€ä¸ªç®€å•çš„æµ‹è¯•è¯·æ±‚
      const testRequest = new StreamCppRequest({
        currentFile: new CurrentFileInfo({
          relativeWorkspacePath: 'test.ts',
          contents: '// test',
          cursorPosition: new CursorPosition({ line: 1, column: 8 }),
          languageId: 'typescript'
        }),
        modelName: 'auto'
      });

      // ä½¿ç”¨æµå¼è°ƒç”¨æµ‹è¯•è¿æ¥ï¼Œä½†åªå–ç¬¬ä¸€ä¸ªå“åº”
      const stream = this.aiClient.streamCpp(testRequest, { 
        signal: AbortSignal.timeout(5000) 
      });

      const firstResponse = await stream[Symbol.asyncIterator]().next();
      
      return {
        success: true,
        message: 'âœ… Connect RPC è¿æ¥æµ‹è¯•æˆåŠŸ',
        details: firstResponse.value
      };
      
    } catch (error) {
      this.logger.error('âŒ Connect RPC è¿æ¥æµ‹è¯•å¤±è´¥', error as Error);
      return {
        success: false,
        message: `âŒ è¿æ¥æµ‹è¯•å¤±è´¥: ${(error as Error).message}`
      };
    }
  }

  /**
   * è·å–æ–‡ä»¶åŒæ­¥ Cookie
   */
  getFilesyncCookie(): string {
    return this.filesyncCookie;
  }

  /**
   * é‡æ–°ç”Ÿæˆæ–‡ä»¶åŒæ­¥ Cookie
   */
  regenerateFilesyncCookie(): void {
    this.filesyncCookie = CryptoUtils.generateFilesyncCookie(); 
    this.logger.info('ğŸ”„ FilesyncCookie å·²é‡æ–°ç”Ÿæˆ');
  }

  /**
   * è·å– FileSyncService å®¢æˆ·ç«¯å¯†é’¥
   */
  getFilesyncClientKey(): string {
    return this.filesyncClientKey;
  }

  /**
   * é‡æ–°ç”Ÿæˆ FileSyncService å®¢æˆ·ç«¯å¯†é’¥
   */
  regenerateFilesyncClientKey(): void {
    this.filesyncClientKey = CryptoUtils.generateClientKey();
    this.logger.info('ğŸ”„ FileSyncService å®¢æˆ·ç«¯å¯†é’¥å·²é‡æ–°ç”Ÿæˆ');
  }

  private getLanguageId(filePath: string): string {
    const ext = filePath.split('.').pop()?.toLowerCase() || '';
    
    const languageMap: Record<string, string> = {
      'js': 'javascript',
      'ts': 'typescript', 
      'jsx': 'javascriptreact',
      'tsx': 'typescriptreact',
      'py': 'python',
      'java': 'java',
      'cpp': 'cpp',
      'c': 'c',
      'cs': 'csharp',
      'go': 'go',
      'rs': 'rust',
      'php': 'php',
      'rb': 'ruby',
      'swift': 'swift',
      'kt': 'kotlin',
      'scala': 'scala',
      'sh': 'shellscript',
      'bash': 'shellscript',
      'html': 'html',
      'css': 'css',
      'scss': 'scss',
      'less': 'less',
      'json': 'json',
      'xml': 'xml',
      'yaml': 'yaml',
      'yml': 'yaml',
      'md': 'markdown',
      'sql': 'sql'
    };
    
    return languageMap[ext] || 'plaintext';
  }

  private detectLineEnding(content: string): string {
    if (content.includes('\r\n')) {
      return '\r\n'; // Windows
    } else if (content.includes('\n')) {
      return '\n';   // Unix/Linux/macOS
    } else if (content.includes('\r')) {
      return '\r';   // Old Mac
    }
    return '\n';     // Default to Unix
  }

  /**
   * ç»„åˆå¤šä¸ª AbortSignalï¼Œä»»ä½•ä¸€ä¸ªå–æ¶ˆéƒ½ä¼šå–æ¶ˆç»„åˆä¿¡å·
   */
  /**
   * æ„å»ºä¸Šä¸‹æ–‡é¡¹ - å°† FileInfo è½¬æ¢ä¸º CppContextItem
   */
  private buildContextItems(additionalFiles: FileInfo[]): CppContextItem[] {
    return additionalFiles.map(file => new CppContextItem({
      relativeWorkspacePath: file.path,
      contents: file.content,
      score: 1.0 // é»˜è®¤è¯„åˆ†
    }));
  }

  /**
   * æ„å»ºé™„åŠ æ–‡ä»¶ - å°† FileInfo è½¬æ¢ä¸º AdditionalFile
   */
  private buildAdditionalFiles(additionalFiles: FileInfo[]): AdditionalFile[] {
    return additionalFiles.map(file => new AdditionalFile({
      relativeWorkspacePath: file.path,
      isOpen: false, // æ–‡ä»¶å½“å‰ä¸åœ¨ç¼–è¾‘å™¨ä¸­æ‰“å¼€
      visibleRangeContent: [file.content], // æ•´ä¸ªæ–‡ä»¶å†…å®¹ä½œä¸ºå¯è§èŒƒå›´
      lastViewedAt: Date.now() / 1000 // å½“å‰æ—¶é—´ä½œä¸ºæœ€åæŸ¥çœ‹æ—¶é—´
    }));
  }

  /**
   * è·å–ä¸Šä¸‹æ–‡ç±»å‹
   */
  private getContextType(filePath: string): string {
    const fileName = filePath.split('/').pop() || '';
    
    // é…ç½®æ–‡ä»¶
    if (fileName.startsWith('.') || fileName.includes('config') || fileName.includes('package.json')) {
      return 'config';
    }
    
    // ç±»å‹å®šä¹‰æ–‡ä»¶
    if (fileName.endsWith('.d.ts') || fileName.includes('types')) {
      return 'types';
    }
    
    // æµ‹è¯•æ–‡ä»¶
    if (fileName.includes('test') || fileName.includes('spec')) {
      return 'test';
    }
    
    // å¸¸è§„ä»£ç æ–‡ä»¶
    return 'code';
  }

  /**
   * åˆ¤æ–­æ˜¯å¦ä¸ºé…ç½®æ–‡ä»¶
   */
  private isConfigFile(filePath: string): boolean {
    const configFiles = [
      'package.json', 'tsconfig.json', 'jsconfig.json',
      '.eslintrc.js', '.eslintrc.json', 'prettier.config.js',
      'vite.config.ts', 'webpack.config.js', 'next.config.js',
      '.env', '.env.local', '.env.production'
    ];
    
    const fileName = filePath.split('/').pop() || '';
    return configFiles.includes(fileName) || fileName.startsWith('.');
  }

  private combineAbortSignals(signals: AbortSignal[]): AbortSignal {
    const controller = new AbortController();
    
    for (const signal of signals) {
      if (signal.aborted) {
        controller.abort();
        break;
      }
      
      signal.addEventListener('abort', () => {
        controller.abort();
      }, { once: true });
    }
    
    return controller.signal;
  }

  /**
   * ç”ŸæˆåŸºäºå·¥ä½œåŒºè·¯å¾„çš„å·¥ä½œåŒºID
   * å‚è€ƒ cursortab.nvim çš„å®ç°ï¼Œä½¿ç”¨ç±»ä¼¼ "a-b-c-d-e-f-g" çš„æ ¼å¼
   */
  private generateWorkspaceId(workspaceRootPath: string): string {
    // åŸºäºå·¥ä½œåŒºè·¯å¾„ç”Ÿæˆä¸€ä¸ªç®€å•çš„å“ˆå¸Œ
    const hash = CryptoUtils.hashString(workspaceRootPath);
    
    // å°†å“ˆå¸Œè½¬æ¢ä¸ºç±»ä¼¼ cursortab çš„æ ¼å¼ï¼š"a-b-c-d-e-f-g"
    const parts = [];
    for (let i = 0; i < hash.length && parts.length < 7; i += 2) {
      const char = String.fromCharCode(97 + (parseInt(hash.substr(i, 2), 16) % 26)); // a-z
      parts.push(char);
    }
    
    // ç¡®ä¿è‡³å°‘æœ‰7ä¸ªéƒ¨åˆ†
    while (parts.length < 7) {
      parts.push('x');
    }
    
    const workspaceId = parts.join('-');
    this.logger.debug(`ğŸ†” ç”Ÿæˆå·¥ä½œåŒºID: ${workspaceId} (æ¥è‡ªè·¯å¾„: ${workspaceRootPath})`);
    return workspaceId;
  }
}