import { Logger } from '../utils/logger';
import type { FileInfo } from '../types';
import { FSUploadFileResponse, FSUploadErrorType } from '../generated/fs_pb';

/**
 * æ–‡ä»¶åŒæ­¥çŠ¶æ€ä¿¡æ¯
 */
export interface FileSyncState {
  path: string;
  workspaceId: string;
  uuid: string;
  modelVersion: number;
  sha256Hash: string;
  uploadTime: number;
  successful: boolean;
  lastContent?: string; // ğŸ”§ æ·»åŠ æœ€ååŒæ­¥çš„å†…å®¹ï¼Œç”¨äºè®¡ç®—å·®å¼‚
}

/**
 * æ–‡ä»¶åŒæ­¥çŠ¶æ€ç®¡ç†å™¨
 * 
 * è´Ÿè´£è·Ÿè¸ªæ–‡ä»¶ä¸Šä¼ çŠ¶æ€ï¼Œç¡®ä¿è¡¥å…¨è¯·æ±‚æ—¶èƒ½å¤Ÿæ­£ç¡®å¼•ç”¨æ–‡ä»¶ç¼“å­˜
 */
export class FileSyncStateManager {
  private logger: Logger;
  private syncStates = new Map<string, FileSyncState>();

  constructor() {
    this.logger = Logger.getInstance();
  }

  /**
   * è®°å½•æ–‡ä»¶ä¸Šä¼ æˆåŠŸçŠ¶æ€
   */
  recordUploadSuccess(
    fileInfo: FileInfo, 
    workspaceId: string, 
    uuid: string, 
    response: FSUploadFileResponse
  ): void {
    const state: FileSyncState = {
      path: fileInfo.path,
      workspaceId,
      uuid,
      modelVersion: fileInfo.modelVersion || 0, // ä½¿ç”¨ä¸Šä¼ æ—¶çš„ç‰ˆæœ¬å·
      sha256Hash: fileInfo.sha256 || '',
      uploadTime: Date.now(),
      successful: response.error === FSUploadErrorType.FS_UPLOAD_ERROR_TYPE_UNSPECIFIED, // æ— é”™è¯¯è¡¨ç¤ºæˆåŠŸ
      lastContent: fileInfo.content // ğŸ”§ ä¿å­˜æ–‡ä»¶å†…å®¹ä»¥ä¾¿åç»­è®¡ç®—å·®å¼‚
    };

    this.syncStates.set(fileInfo.path, state);
    
    this.logger.info('ğŸ“ è®°å½•æ–‡ä»¶åŒæ­¥çŠ¶æ€:');
    this.logger.info(`  ğŸ“„ æ–‡ä»¶: ${state.path}`);
    this.logger.info(`  ğŸ†” å·¥ä½œåŒº: ${state.workspaceId}`);
    this.logger.info(`  ğŸ“¦ UUID: ${state.uuid}`);
    this.logger.info(`  ğŸ”¢ ç‰ˆæœ¬: ${state.modelVersion}`);
    this.logger.info(`  ğŸ” å“ˆå¸Œ: ${state.sha256Hash.substring(0, 16)}...`);
    this.logger.info(`  âœ… æˆåŠŸ: ${state.successful}`);
  }

  /**
   * è·å–æ–‡ä»¶åŒæ­¥çŠ¶æ€
   */
  getFileSyncState(filePath: string): FileSyncState | undefined {
    return this.syncStates.get(filePath);
  }

  /**
   * è·å–æ–‡ä»¶æœ€ååŒæ­¥çš„å†…å®¹ï¼Œç”¨äºè®¡ç®—å¢é‡å·®å¼‚
   */
  getLastSyncedContent(filePath: string): string | null {
    const state = this.syncStates.get(filePath);
    return state?.lastContent || null;
  }

  /**
   * æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å¯ä»¥è¿›è¡Œå¢é‡åŒæ­¥
   */
  canPerformIncrementalSync(filePath: string): boolean {
    const state = this.syncStates.get(filePath);
    return !!(state?.successful && state?.lastContent);
  }

  /**
   * æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å·²æˆåŠŸåŒæ­¥ä¸”ç‰ˆæœ¬åŒ¹é…
   */
  isFileSynced(fileInfo: FileInfo, workspaceId: string): boolean {
    const state = this.syncStates.get(fileInfo.path);
    if (!state || !state.successful) {
      return false;
    }

    // æ£€æŸ¥å·¥ä½œåŒºIDæ˜¯å¦åŒ¹é…
    if (state.workspaceId !== workspaceId) {
      this.logger.warn(`âš ï¸ å·¥ä½œåŒºIDä¸åŒ¹é…: ç¼“å­˜=${state.workspaceId}, è¯·æ±‚=${workspaceId}`);
      return false;
    }

    // æ£€æŸ¥æ–‡ä»¶å“ˆå¸Œæ˜¯å¦åŒ¹é…
    if (state.sha256Hash !== fileInfo.sha256) {
      this.logger.warn(`âš ï¸ æ–‡ä»¶å“ˆå¸Œä¸åŒ¹é…: ç¼“å­˜=${state.sha256Hash.substring(0, 16)}..., å½“å‰=${fileInfo.sha256?.substring(0, 16)}...`);
      return false;
    }

    // æ£€æŸ¥ä¸Šä¼ æ—¶é—´æ˜¯å¦è¿‡æœŸ (è¶…è¿‡1å°æ—¶é‡æ–°ä¸Šä¼ )
    const age = Date.now() - state.uploadTime;
    if (age > 60 * 60 * 1000) {
      this.logger.warn(`âš ï¸ æ–‡ä»¶åŒæ­¥çŠ¶æ€è¿‡æœŸ: ${Math.round(age / 1000 / 60)} åˆ†é’Ÿå‰ä¸Šä¼ `);
      return false;
    }

    return true;
  }

  /**
   * ä¸ºè¡¥å…¨è¯·æ±‚æ„å»ºæ–‡ä»¶ç‰ˆæœ¬ä¿¡æ¯
   */
  buildFileVersionInfo(filePath: string): { fileVersion: number; sha256Hash: string } | null {
    const state = this.syncStates.get(filePath);
    if (!state || !state.successful) {
      return null;
    }

    return {
      fileVersion: state.modelVersion,
      sha256Hash: state.sha256Hash
    };
  }

  /**
   * æ¸…ç†è¿‡æœŸçš„åŒæ­¥çŠ¶æ€
   */
  cleanup(): void {
    const now = Date.now();
    const expiredPaths: string[] = [];

    for (const [path, state] of this.syncStates.entries()) {
      // æ¸…ç†è¶…è¿‡2å°æ—¶çš„çŠ¶æ€
      if (now - state.uploadTime > 2 * 60 * 60 * 1000) {
        expiredPaths.push(path);
      }
    }

    if (expiredPaths.length > 0) {
      this.logger.info(`ğŸ§¹ æ¸…ç† ${expiredPaths.length} ä¸ªè¿‡æœŸçš„æ–‡ä»¶åŒæ­¥çŠ¶æ€`);
      expiredPaths.forEach(path => this.syncStates.delete(path));
    }
  }

  /**
   * ç§»é™¤æ–‡ä»¶åŒæ­¥çŠ¶æ€
   */
  removeFileSyncState(filePath: string): void {
    if (this.syncStates.delete(filePath)) {
      this.logger.debug(`ğŸ—‘ï¸ ç§»é™¤æ–‡ä»¶åŒæ­¥çŠ¶æ€: ${filePath}`);
    }
  }

  /**
   * è·å–æ‰€æœ‰åŒæ­¥çŠ¶æ€çš„ç»Ÿè®¡ä¿¡æ¯
   */
  getStats(): { total: number; successful: number; failed: number } {
    let successful = 0;
    let failed = 0;

    for (const state of this.syncStates.values()) {
      if (state.successful) {
        successful++;
      } else {
        failed++;
      }
    }

    return {
      total: this.syncStates.size,
      successful,
      failed
    };
  }
}