import * as protobuf from 'protobufjs';
import { Logger } from './logger';
import type { CompletionRequest, FileInfo } from '../types';

/**
 * Connect RPC Protobufå¤„ç†å™¨
 * 
 * Connect RPCæ˜¯åŸºäºHTTPæ ‡å‡†çš„RPCæ¡†æ¶ï¼Œæ”¯æŒï¼š
 * - HTTP/1.1æˆ–HTTP/2ä¼ è¾“
 * - JSONæˆ–äºŒè¿›åˆ¶protobufç¼–ç 
 * - æµå¼è°ƒç”¨ï¼ˆServer-Streamingï¼‰
 * - æ ‡å‡†HTTPå¤´éƒ¨è®¤è¯
 */

export class ProtobufUtils {
  private static instance: ProtobufUtils;
  private logger: Logger;
  private root: protobuf.Root | null = null;
  
  // Proto message types
  private StreamCppRequest: protobuf.Type | null = null;
  private StreamCppResponse: protobuf.Type | null = null;
  private FSUploadFileRequest: protobuf.Type | null = null;
  private FSUploadFileResponse: protobuf.Type | null = null;
  private FSSyncFileRequest: protobuf.Type | null = null;
  private FSSyncFileResponse: protobuf.Type | null = null;

  private constructor() {
    this.logger = Logger.getInstance();
  }

  static getInstance(): ProtobufUtils {
    if (!ProtobufUtils.instance) {
      ProtobufUtils.instance = new ProtobufUtils();
    }
    return ProtobufUtils.instance;
  }

  async initialize(): Promise<void> {
    try {
      this.root = new protobuf.Root();
      
      // åŠ è½½cursor-apiå…¼å®¹çš„protoå®šä¹‰
      this.logger.info('ğŸ”§ Loading cursor-api compatible proto definitions...');
      await this.loadConnectRpcProtoDefinitions();

      // è·å–Connect RPCæ¶ˆæ¯ç±»å‹
      this.StreamCppRequest = this.root.lookupType('aiserver.v1.StreamCppRequest');
      this.StreamCppResponse = this.root.lookupType('aiserver.v1.StreamCppResponse');
      this.FSUploadFileRequest = this.root.lookupType('aiserver.v1.FSUploadFileRequest');
      this.FSUploadFileResponse = this.root.lookupType('aiserver.v1.FSUploadFileResponse');
      this.FSSyncFileRequest = this.root.lookupType('aiserver.v1.FSSyncFileRequest');
      this.FSSyncFileResponse = this.root.lookupType('aiserver.v1.FSSyncFileResponse');

      // éªŒè¯Connect RPCæœåŠ¡å®šä¹‰
      const aiService = this.root.lookupService('aiserver.v1.AiService');
      const fsService = this.root.lookupService('aiserver.v1.FileSyncService');
      
      this.logger.info(`ğŸ”Œ Connect RPCæœåŠ¡åŠ è½½:`);
      this.logger.info(`  - AiService: ${aiService ? 'âœ…' : 'âŒ'}`);
      this.logger.info(`  - FileSyncService: ${fsService ? 'âœ…' : 'âŒ'}`);
      
      // è°ƒè¯•æ¶ˆæ¯ç±»å‹ä¿¡æ¯
      this.logger.info(`ğŸ“‹ StreamCppRequest å­—æ®µæ•°é‡: ${Object.keys(this.StreamCppRequest.fields).length}`);
      this.logger.info(`ğŸ“‹ æ ¸å¿ƒå­—æ®µ:`, Object.keys(this.StreamCppRequest.fields).slice(0, 5));
      
      // æµ‹è¯•Connect RPCæ¶ˆæ¯ç¼–ç 
      await this.testConnectRpcEncoding();

      this.logger.info('âœ… Connect RPC Protobuf types initialized successfully');
    } catch (error) {
      this.logger.error('âŒ Failed to initialize Connect RPC protobuf types', error as Error);
      throw error;
    }
  }

  private async loadConnectRpcProtoDefinitions(): Promise<void> {
    if (!this.root) {
      return;
    }

    try {
      // ç°åœ¨æˆ‘ä»¬ä½¿ç”¨ç”Ÿæˆçš„ç±»å‹ï¼Œè¿™ä¸ªæ–¹æ³•ä¸»è¦ç”¨äºå‘åå…¼å®¹
      this.logger.warn('âš ï¸ ä½¿ç”¨è¿è¡Œæ—¶ protobuf è§£æï¼ˆå‘åå…¼å®¹æ¨¡å¼ï¼‰');
      this.logger.info('ğŸ’¡ å»ºè®®ä½¿ç”¨ç”Ÿæˆçš„ Connect RPC ç±»å‹ä»¥è·å¾—æ›´å¥½çš„æ€§èƒ½å’Œç±»å‹å®‰å…¨');
      
      // ä¸ºå‘åå…¼å®¹ï¼ŒåŠ è½½åŸºç¡€çš„ proto å®šä¹‰
      const basicProtoDefinition = `
        syntax = "proto3";
        package aiserver.v1;
        
        message CursorPosition {
          int32 line = 1;
          int32 column = 2;
        }
        
        message CurrentFileInfo {
          string relative_workspace_path = 1;
          string contents = 2;
          CursorPosition cursor_position = 3;
          string language_id = 5;
        }
        
        message StreamCppRequest {
          CurrentFileInfo current_file = 1;
          repeated string diff_history = 2;
          optional string model_name = 3;
        }
        
        message StreamCppResponse {
          string text = 1;
          optional bool done_stream = 4;
        }
        
        service AiService {
          rpc StreamCpp(StreamCppRequest) returns (stream StreamCppResponse);
        }
      `;
      
      const parsed = protobuf.parse(basicProtoDefinition);
      this.root.add(parsed.root);
      
      this.logger.info('âœ… åŸºç¡€ proto å®šä¹‰åŠ è½½æˆåŠŸï¼ˆå‘åå…¼å®¹ï¼‰');
    } catch (error) {
      this.logger.error('âŒ Failed to load proto definitions', error as Error);
      throw error;
    }
  }

  private async testConnectRpcEncoding(): Promise<void> {
    try {
      if (!this.StreamCppRequest) {
        return;
      }

      // æµ‹è¯•åŸºæœ¬çš„Connect RPCæ¶ˆæ¯ç¼–ç 
      const testMessage = { 
        model_name: 'test',
        give_debug_output: false
      };
      
      const testEncoded = this.StreamCppRequest.encode(testMessage).finish();
      this.logger.info(`ğŸ§ª Connect RPCæµ‹è¯•ç¼–ç æˆåŠŸï¼Œå¤§å°: ${testEncoded.length} å­—èŠ‚`);
      
      // æµ‹è¯•è§£ç 
      const decoded = this.StreamCppRequest.decode(testEncoded);
      const decodedObject = this.StreamCppRequest.toObject(decoded);
      this.logger.info(`ğŸ§ª Connect RPCè§£ç æµ‹è¯•:`, decodedObject);
      
    } catch (testError) {
      this.logger.error('ğŸ§ª Connect RPCç¼–ç æµ‹è¯•å¤±è´¥:', testError as Error);
      throw testError;
    }
  }

  /**
   * åˆ›å»ºConnect RPCæ ¼å¼çš„StreamCppRequestæ¶ˆæ¯
   * ç”¨äºcursor-apiçš„/cpp/streamæ¥å£
   */
  createStreamCppRequest(request: CompletionRequest): Uint8Array {
    if (!this.StreamCppRequest) {
      throw new Error('StreamCppRequest type not initialized');
    }

    try {
      const currentFile = request.currentFile;
      const content = currentFile.content || '';
      const lines = content.split('\n');
      
      this.logger.info(`ğŸ”§ æ„å»ºConnect RPC StreamCppRequest:`);
      this.logger.info(`  - æ–‡ä»¶è·¯å¾„: ${currentFile.path}`);
      this.logger.info(`  - å†…å®¹é•¿åº¦: ${content.length} å­—ç¬¦`);
      this.logger.info(`  - è¡Œæ•°: ${lines.length}`);
      this.logger.info(`  - å…‰æ ‡ä½ç½®: ${request.cursorPosition.line}:${request.cursorPosition.column}`);
      
      // æ„å»ºç¬¦åˆcursor-apiæœŸæœ›çš„æ¶ˆæ¯æ ¼å¼
      const message = {
        current_file: {
          relative_workspace_path: currentFile.path || 'unknown.ts',
          contents: content,
          cursor_position: {
            line: request.cursorPosition.line,
            column: request.cursorPosition.column
          },
          language_id: this.getLanguageId(currentFile.path || ''),
          total_number_of_lines: lines.length,
          contents_start_at_line: 0,
          sha_256_hash: currentFile.sha256 || '',
          rely_on_filesync: false, // åˆæœŸä¸ä¾èµ–æ–‡ä»¶åŒæ­¥
          workspace_root_path: '', 
          line_ending: this.detectLineEnding(content),
          diagnostics: [], // TODO: é›†æˆVSCodeè¯Šæ–­ä¿¡æ¯
          dataframes: [],
          cells: [],
          top_chunks: [],
          cell_start_lines: []
        },
        diff_history: request.diffHistory || [],
        model_name: request.modelName || 'auto',
        give_debug_output: request.debugOutput || false,
        // Connect RPCç‰¹æœ‰å­—æ®µ
        context_items: [], // TODO: æ·»åŠ ä¸Šä¸‹æ–‡é¡¹
        file_diff_histories: [],
        merged_diff_histories: [],
        block_diff_patches: [],
        is_nightly: false,
        is_debug: request.debugOutput || false,
        immediately_ack: false,
        enable_more_context: true
      };

      // éªŒè¯æ¶ˆæ¯æ ¼å¼
      const errMsg = this.StreamCppRequest.verify(message);
      if (errMsg) {
        this.logger.error(`âŒ Connect RPCæ¶ˆæ¯éªŒè¯å¤±è´¥: ${errMsg}`);
        throw new Error(`Connect RPC StreamCppRequest verification failed: ${errMsg}`);
      }

      this.logger.info('âœ… Connect RPCæ¶ˆæ¯éªŒè¯é€šè¿‡');

      // åˆ›å»ºå’Œç¼–ç æ¶ˆæ¯
      const messageObject = this.StreamCppRequest.create(message);
      const encoded = this.StreamCppRequest.encode(messageObject).finish();
      
      this.logger.info(`âœ… Connect RPCæ¶ˆæ¯ç¼–ç å®Œæˆï¼Œå¤§å°: ${encoded.length} å­—èŠ‚`);
      
      if (encoded.length === 0) {
        throw new Error('âŒ Connect RPCæ¶ˆæ¯ç¼–ç ç»“æœä¸ºç©º');
      }
      
      return encoded;
      
    } catch (error) {
      this.logger.error('âŒ æ„å»ºConnect RPC StreamCppRequestå¤±è´¥', error as Error);
      throw error;
    }
  }

  /**
   * åˆ›å»ºConnect RPCæ ¼å¼çš„JSONè¯·æ±‚ä½“
   * Connect RPCæ”¯æŒJSONç¼–ç ï¼Œæ›´æ˜“è°ƒè¯•
   */
  createStreamCppRequestJSON(request: CompletionRequest): object {
    if (!this.StreamCppRequest) {
      throw new Error('StreamCppRequest type not initialized');
    }

    try {
      const currentFile = request.currentFile;
      const content = currentFile.content || '';
      const lines = content.split('\n');
      
      // æ„å»ºJSONæ ¼å¼çš„Connect RPCæ¶ˆæ¯
      const jsonMessage = {
        currentFile: {
          relativeWorkspacePath: currentFile.path || 'unknown.ts',
          contents: content,
          cursorPosition: {
            line: request.cursorPosition.line,
            column: request.cursorPosition.column
          },
          languageId: this.getLanguageId(currentFile.path || ''),
          totalNumberOfLines: lines.length,
          contentsStartAtLine: 0,
          sha256Hash: currentFile.sha256 || '',
          relyOnFilesync: false,
          workspaceRootPath: '',
          lineEnding: this.detectLineEnding(content),
          diagnostics: [],
          dataframes: [],
          cells: [],
          topChunks: [],
          cellStartLines: []
        },
        diffHistory: request.diffHistory || [],
        modelName: request.modelName || 'auto',
        giveDebugOutput: request.debugOutput || false,
        contextItems: [],
        fileDiffHistories: [],
        mergedDiffHistories: [],
        blockDiffPatches: [],
        isNightly: false,
        isDebug: request.debugOutput || false,
        immediatelyAck: false,
        enableMoreContext: true
      };

      this.logger.info('âœ… Connect RPC JSONæ¶ˆæ¯åˆ›å»ºå®Œæˆ');
      return jsonMessage;
      
    } catch (error) {
      this.logger.error('âŒ æ„å»ºConnect RPC JSONæ¶ˆæ¯å¤±è´¥', error as Error);
      throw error;
    }
  }

  /**
   * è§£æConnect RPC StreamCppResponseæ¶ˆæ¯
   * æ”¯æŒäºŒè¿›åˆ¶å’ŒJSONæ ¼å¼
   */
  parseStreamCppResponse(buffer: Uint8Array): any {
    if (!this.StreamCppResponse) {
      throw new Error('StreamCppResponse type not initialized');
    }

    try {
      const message = this.StreamCppResponse.decode(buffer);
      return this.StreamCppResponse.toObject(message);
    } catch (error) {
      this.logger.error('Failed to decode StreamCppResponse', error as Error);
      throw error;
    }
  }

  /**
   * è§£æConnect RPC JSONå“åº”
   */
  parseStreamCppResponseJSON(jsonData: any): any {
    try {
      // Connect RPC JSONå“åº”é€šå¸¸ä½¿ç”¨camelCase
      return {
        text: jsonData.text || '',
        suggestionStartLine: jsonData.suggestionStartLine,
        suggestionConfidence: jsonData.suggestionConfidence,
        doneStream: jsonData.doneStream || false,
        debugModelOutput: jsonData.debugModelOutput,
        cursorPredictionTarget: jsonData.cursorPredictionTarget,
        modelInfo: jsonData.modelInfo,
        rangeToReplace: jsonData.rangeToReplace
      };
    } catch (error) {
      this.logger.error('Failed to parse Connect RPC JSON response', error as Error);
      throw error;
    }
  }

  /**
   * åˆ›å»ºConnect RPCæ ¼å¼çš„FSUploadFileRequestæ¶ˆæ¯
   * ç”¨äºcursor-apiçš„/file/uploadæ¥å£
   */
  createFSUploadFileRequest(fileInfo: FileInfo, uuid: string): Uint8Array {
    if (!this.FSUploadFileRequest) {
      throw new Error('FSUploadFileRequest type not initialized');
    }

    try {
      const message = {
        uuid: uuid,
        relative_workspace_path: fileInfo.path,
        contents: fileInfo.content || '',
        model_version: fileInfo.modelVersion || 0,
        sha256_hash: fileInfo.sha256 || ''
      };

      this.logger.info(`ğŸ”§ æ„å»ºConnect RPC FSUploadFileRequest:`);
      this.logger.info(`  - UUID: ${uuid}`);
      this.logger.info(`  - æ–‡ä»¶è·¯å¾„: ${fileInfo.path}`);
      this.logger.info(`  - å†…å®¹é•¿åº¦: ${message.contents.length} å­—ç¬¦`);
      this.logger.info(`  - æ¨¡å‹ç‰ˆæœ¬: ${message.model_version}`);

      const errMsg = this.FSUploadFileRequest.verify(message);
      if (errMsg) {
        this.logger.error(`âŒ FSUploadFileRequestéªŒè¯å¤±è´¥: ${errMsg}`);
        throw new Error(`FSUploadFileRequest verification failed: ${errMsg}`);
      }

      const messageObject = this.FSUploadFileRequest.create(message);
      const encoded = this.FSUploadFileRequest.encode(messageObject).finish();
      
      this.logger.info(`âœ… Connect RPC FSUploadFileRequestç¼–ç å®Œæˆï¼Œå¤§å°: ${encoded.length} å­—èŠ‚`);
      return encoded;
      
    } catch (error) {
      this.logger.error('âŒ æ„å»ºConnect RPC FSUploadFileRequestå¤±è´¥', error as Error);
      throw error;
    }
  }

  /**
   * åˆ›å»ºConnect RPCæ ¼å¼çš„FSUploadFileRequest JSONæ¶ˆæ¯
   */
  createFSUploadFileRequestJSON(fileInfo: FileInfo, uuid: string): object {
    try {
      const jsonMessage = {
        uuid: uuid,
        relativeWorkspacePath: fileInfo.path,
        contents: fileInfo.content || '',
        modelVersion: fileInfo.modelVersion || 0,
        sha256Hash: fileInfo.sha256 || ''
      };

      this.logger.info('âœ… Connect RPC FSUploadFileRequest JSONæ¶ˆæ¯åˆ›å»ºå®Œæˆ');
      return jsonMessage;
      
    } catch (error) {
      this.logger.error('âŒ æ„å»ºConnect RPC FSUploadFileRequest JSONå¤±è´¥', error as Error);
      throw error;
    }
  }

  // è§£æFSUploadFileResponseæ¶ˆæ¯
  parseFSUploadFileResponse(buffer: Uint8Array): any {
    if (!this.FSUploadFileResponse) {
      throw new Error('FSUploadFileResponse type not initialized');
    }

    try {
      const message = this.FSUploadFileResponse.decode(buffer);
      return this.FSUploadFileResponse.toObject(message);
    } catch (error) {
      this.logger.error('Failed to decode FSUploadFileResponse', error as Error);
      throw error;
    }
  }

  // åˆ›å»ºFSSyncFileRequestæ¶ˆæ¯
  createFSSyncFileRequest(fileInfo: FileInfo, uuid: string, filesyncCookie: string): Uint8Array {
    if (!this.FSSyncFileRequest) {
      throw new Error('FSSyncFileRequest type not initialized');
    }

    const message = {
      uuid: uuid,
      relative_workspace_path: fileInfo.path,
      model_version: fileInfo.modelVersion || 0,
      filesync_updates: [], // TODO: Implement incremental updates
      sha256_hash: fileInfo.sha256
    };

    const errMsg = this.FSSyncFileRequest.verify(message);
    if (errMsg) {
      throw new Error(`FSSyncFileRequest verification failed: ${errMsg}`);
    }

    const messageObject = this.FSSyncFileRequest.create(message);
    return this.FSSyncFileRequest.encode(messageObject).finish();
  }

  // è§£æFSSyncFileResponseæ¶ˆæ¯
  parseFSSyncFileResponse(buffer: Uint8Array): any {
    if (!this.FSSyncFileResponse) {
      throw new Error('FSSyncFileResponse type not initialized');
    }

    try {
      const message = this.FSSyncFileResponse.decode(buffer);
      return this.FSSyncFileResponse.toObject(message);
    } catch (error) {
      this.logger.error('Failed to decode FSSyncFileResponse', error as Error);
      throw error;
    }
  }

  // é€šç”¨çš„æ¶ˆæ¯è§£ç æ–¹æ³•ï¼ˆç”¨äºSSEæµè§£æï¼‰
  decodeMessage(buffer: Uint8Array, messageType: string): any {
    try {
      switch (messageType) {
        case 'StreamCppResponse':
          return this.parseStreamCppResponse(buffer);
        case 'FSUploadFileResponse':
          return this.parseFSUploadFileResponse(buffer);
        case 'FSSyncFileResponse':
          return this.parseFSSyncFileResponse(buffer);
        default:
          throw new Error(`Unknown message type: ${messageType}`);
      }
    } catch (error) {
      this.logger.error(`Failed to decode message type ${messageType}`, error as Error);
      throw error;
    }
  }

  private getLanguageId(filePath: string): string {
    const ext = filePath.split('.').pop()?.toLowerCase() || '';
    
    const languageMap: Record<string, string> = {
      'js': 'javascript',
      'ts': 'typescript',
      'jsx': 'javascriptreact',
      'tsx': 'typescriptreact',
      'py': 'python',
      'java': 'java',
      'cpp': 'cpp',
      'c': 'c',
      'cs': 'csharp',
      'go': 'go',
      'rs': 'rust',
      'php': 'php',
      'rb': 'ruby',
      'swift': 'swift',
      'kt': 'kotlin',
      'scala': 'scala',
      'sh': 'shellscript',
      'bash': 'shellscript',
      'html': 'html',
      'css': 'css',
      'scss': 'scss',
      'less': 'less',
      'json': 'json',
      'xml': 'xml',
      'yaml': 'yaml',
      'yml': 'yaml',
      'md': 'markdown',
      'sql': 'sql'
    };
    
    return languageMap[ext] || 'plaintext';
  }

  private detectLineEnding(content: string): string {
    if (content.includes('\r\n')) {
      return '\r\n'; // Windows
    } else if (content.includes('\n')) {
      return '\n';   // Unix/Linux/macOS
    } else if (content.includes('\r')) {
      return '\r';   // Old Mac
    }
    return '\n';     // Default to Unix
  }
}